# Baic-AI-Message-Bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-ai-news.yml
cloudflare/ai-news-scheduler/: README.md  package-lock.json  package.json  wrangler.jsonc
cloudflare/ai-news-scheduler/src/: index.js
cloudflare/ai-news-scheduler/test/: index.test.js
config/: sources.yaml
desktop-shortcuts/: AI每周总结.webloc  AI每日总结.webloc  README.md
docs/superpowers/plans/: 2026-07-20-reliable-external-scheduler.md
docs/superpowers/specs/: 2026-07-20-reliable-external-scheduler-design.md
outputs/: AI新闻Bot-交付说明.md
src/ai_news_bot/: __init__.py  cli.py  collectors.py  config.py  curator.py  daily_guard.py  dedupe.py  feishu.py  history.py  models.py  text.py  web_export.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_curator.py  test_daily_guard.py  test_dedupe.py  test_feishu.py  test_text.py  test_web_export.py  test_webpage_collector.py
web/: package.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  news-dashboard.tsx  news-data.ts  page.tsx  summary.ts
web/app/api/digest/: route.ts
web/app/api/summary/: route.ts
web/db/: digest-store.ts  schema.ts
web/drizzle/: 0000_skinny_kylun.sql
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/public/data/: latest.json
web/tests/: news-data-contract.test.mjs  rendered-html.test.mjs
