[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-bot"
version = "0.1.0"
description = "Daily AI news collector, curator, and Feishu bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "feedparser>=6.0.11,<7",
  "openai>=2.0,<3",
  "pydantic>=2.8,<3",
  "python-dateutil>=2.9,<3",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
ai-news-bot = "ai_news_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

